fix(logo size in design 2): the logo was too big so I had to resize it.

--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -333,6 +333,7 @@ h1{
 
     .logo { /*design 2*/
         cursor: pointer;
+        height: 20px;
     }
 
     .nav_links li {
